# quarry

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
_astro/: _entry_.DqY_Fps4.css  client.svelte.C5CE6RdP.js
archetypes/: index.html
archetypes/TRAIT_BUILDER_ARCHETYPE/: index.html
archetypes/TRAIT_COMMANDER_ARCHETYPE/: index.html
archetypes/TRAIT_DIPLOMAT_ARCHETYPE/: index.html
archetypes/TRAIT_HERO_ARCHETYPE/: index.html
characters/: index.html
cognomen/: index.html
concepts/: index.html
councils/: index.html
difficultyLevels/: index.html
docs/: adding-categories.md  web-data-requirements.md  wiki-categories.txt  wiki-data-extraction.md
dynasties/: index.html
familyClasses/: index.html
heights/: index.html
improvements/: index.html
laws/: index.html
missions/: index.html
nationalAmbitions/: index.html
nations/: index.html
occurrences/: index.html
projects/: index.html
promotions/: index.html
ratings/: index.html
religions/: index.html
religiousImprovements/: index.html
resources/: index.html
specialImprovements/: index.html
specialists/: index.html
technologies/: index.html
terrain/: index.html
theologies/: index.html
traits/: index.html
traitsAdjectives/: index.html
traitsItems/: index.html
tribes/: index.html
tutorials/: index.html
unitEffects/: index.html
units/: index.html
vegetation/: index.html
victoryTypes/: index.html
web/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
wonders/: index.html
yields/: index.html
(+1630 files in other folders)
